syntax = "proto3";
package normal_starting;

// 注册用户
message register {
  string UserName = 1; // 用户名
  string Nickname = 2; // 昵称
  // 测试,不使用密码
}

// 注册用户回复
message registerResp {
  string error = 1; // 如果成功,则errlr为空串("")
  string UserName = 2; // 注册成功的用户名
  uint64 UserId = 3; // 注册成功的用户ID
}

// 登录
message loginSpec {
  string UserName = 1; // 用户名
  // 测试,不使用密码
}

// 登录回复
message loginResp {
  string error = 1;
  string UserName = 2; // 用户名
  uint64 UserId = 3; // 用户ID
}

message logoutSpec {
  string userName = 1;
}
message logoutResp {
  string error = 1;
}
// 广播
message broadcast {
  string content = 1;
}
